# diamond-kata

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-app.yml  build-test.yml
tests/: test_main.py
