[project]
name = "Diamond"
version = "1.0"
description = "code kata from https://codingdojo.org/kata/Diamond/"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pysnooper>=1.1.1",
    "ipython>=8.3.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
